# onboarding_2021

./: .gitignore  README.md  catkin_ws - Shortcut.lnk
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/control/: control_node
catkin_ws/devel/lib/pkgconfig/: control.pc  jetbot_gazebo.pc  jetbot_ros.pc  vision.pc
catkin_ws/devel/lib/vision/: vision_task
catkin_ws/devel/share/control/cmake/: controlConfig.cmake
catkin_ws/devel/share/jetbot_gazebo/cmake/: jetbot_gazeboConfig.cmake
catkin_ws/devel/share/jetbot_ros/cmake/: jetbot_rosConfig.cmake
catkin_ws/devel/share/vision/cmake/: visionConfig.cmake
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/launch/: motors_run.launch
catkin_ws/src/control/src/: control_node.cpp
catkin_ws/src/jetbot_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/jetbot_gazebo/launch/: ball_task.launch  common.xml
catkin_ws/src/jetbot_gazebo/worlds/: ball_task.world  diff_drive_ball_task.world
catkin_ws/src/jetbot_ros/: CMakeLists.txt
catkin_ws/src/jetbot_ros/gazebo/: install_jetbot_model.sh
catkin_ws/src/jetbot_ros/gazebo/blue_ball/: model-1_4.sdf  model.config  model.sdf
catkin_ws/src/jetbot_ros/gazebo/diffdrive/: model.config  model.sdf
catkin_ws/src/jetbot_ros/gazebo/jetbot/: model.sdf
catkin_ws/src/jetbot_ros/gazebo/red_ball/: model-1_4.sdf  model.config  model.sdf
catkin_ws/src/jetbot_ros/scripts/: jetbot_sim_motors.py
catkin_ws/src/task/: CMakeLists.txt  package.xml
catkin_ws/src/task/src/: task.cpp
catkin_ws/src/vision/: CMakeLists.txt
catkin_ws/src/vision/launch/: run_vision.launch
catkin_ws/src/vision/src/: foo.txt  vision_task.cpp
docker/: Dockerfile  docker-compose.yml  resetDocker.sh
