<?xml version="1.0"?>
<package>
  <name>jetbot_gazebo</name>
  <version>0.0.1</version>
  <description>Jetbot Gazebo Simulator</description>

  <author>Author</author>
  <author email="author@gmail.com">Author</author>
  <maintainer email="author@gmail.com">Author</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>uuv_gazebo_plugins</build_depend>
  <build_depend>uuv_world_plugins</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>au_core</build_depend>
  <build_depend>au_sensors</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libxml++-2.6</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>au_core</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>


  <!-- This is necessary since we use Gazebo resources to bootstrap, so it needs to be able to include the information specific to ours -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>