<?xml version="1.0"?>
<package>
    <name>onboarding_task</name>
    <version>0.0.1</version>
    <description>Vision & Control Task For Onboarding</description>

    <maintainer email="dummy@dummy.com">Justin</maintainer>

    <license>TODO</license>

    <author email="dummy@dummy.com">Justin</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>